# QGraphExplorer

./: .gitignore  CMakeLists.txt  EdgeItem.cpp  EdgeItem.h  GraphWidget.cpp  GraphWidget.h  MainWindow.cpp  MainWindow.h  QtWidgetsApplication1.sln  QtWidgetsApplication1.vcxproj  QtWidgetsApplication1.vcxproj.filters  README.md  VertexItem.cpp  VertexItem.h  movie.json
scripts/: DataSpider.py
src/: AddItems.cpp  AddItems.h  EdgeItem.cpp  EdgeItem.h  GraphWidget.cpp  GraphWidget.h  JSONProcessor.cpp  JSONProcessor.h  MainWindow.cpp  MainWindow.h  Movie.cpp  Movie.h  NodeInfoPopup.cpp  NodeInfoPopup.h  QuadTree.cpp  QuadTree.h  Search.cpp  Search.h  VertexInfoPopup.cpp  VertexInfoPopup.h  VertexItem.cpp  VertexItem.h  VertexWithInfo.cpp  VertexWithInfo.h  main.cpp
src/utils/: Locale.hpp
